--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.175.0",
+    "three-stdlib": "^2.36.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
